database note